--- a/include/clixon_config.h.in
+++ b/include/clixon_config.h.in
@@ -6,6 +6,9 @@
 /* Enable publish of notification streams using SSE and curl */
 #undef CLIXON_PUBLISH_STREAMS
 
+/* Enable TLS for NETCONF over TLS and native RESTCONF */
+#undef CLIXON_TLS
+
 /* Clixon major release */
 #undef CLIXON_VERSION_MAJOR
 
@@ -33,7 +36,7 @@
 /* Define to 1 if you have the `getresuid' function. */
 #undef HAVE_GETRESUID
 
-/* Enable HTTP/1 (default true) */
+/* Set to true to enable Native HTTP/1 */
 #undef HAVE_HTTP1
 
 /* Define to 1 if you have the `inet_aton' function. */
